# inverse_problems_of_ds

./: .pre-commit-config.yaml  Makefile  pyproject.toml
conf/: .gitignore
conf/base/: logging.yml
conf/context_management/templates/: catalog.yaml
notebooks/: fourier_methods.py  lab_1_heat_equation.ipynb
src/: __init__.py
src/pipelines/: settings.py
src/pipelines/pipelines/: __init__.py
